mavenized projects fixed POM files adaptions for Xtext 2.5.4