@@ -16,62 +16,20 @@
 	<packaging>eclipse-plugin</packaging>
 	
 	<build>
-		<resources>
-			<resource>
-				<directory>${project.build.directory}/xtext</directory>
-			</resource>
-		</resources>
 		<plugins>
-			<!-- Copy all Xtext related sources to seperate folder that is registered 
-				as resource folder -->
-			<plugin>
-				<artifactId>maven-resources-plugin</artifactId>
-				<executions>
-					<execution>
-						<id>copy-resources</id>
-						<phase>initialize</phase>
-						<goals>
-							<goal>copy-resources</goal>
-						</goals>
-						<configuration>
-							<outputDirectory>${project.build.directory}/xtext</outputDirectory>
-							<resources>
-								<resource>
-									<directory>src</directory>
-									<includes>
-										<include>**/*.xtext</include>
-										<include>**/*.mwe2</include>
-									</includes>
-								</resource>
-							</resources>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
 			<plugin>
 				<groupId>org.fornax.toolsupport</groupId>
 				<artifactId>fornax-oaw-m2-plugin</artifactId>
 				<executions>
 					<execution>
-							<id>generate_model_code</id>
-							<phase>generate-sources</phase>
-							<goals>
-								<goal>run-workflow</goal>
-							</goals>
-							<configuration>
-								<workflowEngine>mwe2</workflowEngine>
-								<workflowDescriptor>src/org/vclipse/vcml/mm/GenerateVcmlMM.mwe2</workflowDescriptor>
-								<timestampFileName>xtext-generator.timestamp</timestampFileName>
-							<jvmSettings>
-								<fork>true</fork>
-								<jvmArgs>
-									<jvmArg>-Xms100m</jvmArg>
-									<jvmArg>-Xmx700m</jvmArg>
-									<jvmArg>-XX:MaxPermSize=128m</jvmArg>
-									<jvmArg>-Dlog4j.configuration=file:${basedir}/log4j.properties</jvmArg>
-								</jvmArgs>
-							</jvmSettings>
+						<id>build-workflow</id>
+						<phase>generate-sources</phase>
+						<configuration>
+							<workflowDescriptor>src/org/vclipse/vcml/mm/GenerateVcmlMM.mwe2</workflowDescriptor>
 						</configuration>
+						<goals>
+							<goal>run-workflow</goal>
+						</goals>
 					</execution>
 				</executions>
 			</plugin>
